@@ -8,11 +8,9 @@ import android.util.Log;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
 
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.util.Arrays;
 import java.util.List;
 
 import io.realm.Realm;
@@ -56,17 +54,7 @@ public class CityLoader extends AsyncTaskLoader<List<City>> {
         dataIsReady = true;
 
         // Delete realm files
-        File writablePath = context.getFilesDir();
-        for (File file : Arrays.asList(
-                new File(writablePath, Realm.DEFAULT_REALM_NAME),
-                new File(writablePath, Realm.DEFAULT_REALM_NAME + ".lock"))) {
-            if (file.exists()) {
-                boolean deleteResult = file.delete();
-                if (!deleteResult) {
-                    throw new AssertionError("Could not delete file: " + file.getAbsolutePath());
-                }
-            }
-        }
+        Realm.deleteRealmFile(context);
 
         //Store the retrieved items to the Realm
         Realm realm = Realm.getInstance(context);
