@@ -4,6 +4,7 @@ Beta-0.3.0
   =======
 
   * Renaming beginWrite to beginTransaction and commit to commitTransaction
+  * Added utility methods to delete Realm files
 
   Bug Fixes
   =========
